--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>RESPONSIVE DESIGN</title>
 </head>
 <body>
-    
+    <header></header>
+<div class="page">
+  <div class="menu"></div>
+  <div class="content"></div>
+</div>
+<footer></footer>
+<link rel="stylesheet"
+href="mobile.css"
+media="(max-width: 640px)">
+
+<link rel="stylesheet"
+href="tablet.css"
+media="(min-width: 640px) and (max-width: 1280px)">
+
+<link rel="stylesheet"
+href="desktop.css"
+media="(min-width: 1280px)">
 </body>
 </html>
